# node-plugin

./: .prototools  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/common/: Cargo.toml
crates/common/src/: commands.rs  config.rs  lib.rs  node_dist.rs  package_json.rs
crates/depman/: Cargo.toml
crates/depman/src/: proto.rs
crates/node/: Cargo.toml
crates/node-depman/: Cargo.toml
crates/node-depman/src/: lib.rs  npm_registry.rs  package_manager.rs  proto.rs
crates/node-depman/tests/: download_test.rs  globals_test.rs  hooks_test.rs  metadata_test.rs  shims_test.rs  versions_test.rs
crates/node-depman/tests/snapshots/: shims_test__npm__creates_global_shims-2.snap  shims_test__npm__creates_global_shims-3.snap  shims_test__npm__creates_global_shims.snap  shims_test__npm__creates_shims.snap  shims_test__pnpm__creates_global_shims-2.snap  shims_test__pnpm__creates_global_shims.snap  shims_test__pnpm__creates_shims.snap  shims_test__yarn__creates_global_shims-2.snap  shims_test__yarn__creates_global_shims.snap
crates/node/src/: lib.rs  proto.rs
crates/node/src/node/: package_json.rs
crates/node/tests/: download_test.rs  globals_test.rs  hooks_test.rs  metadata_test.rs  shims_test.rs  versions_test.rs
crates/node/tests/snapshots/: shims_test__creates_global_shims-2.snap  shims_test__creates_global_shims.snap  shims_test__creates_shims.snap
scripts/: cleanTarget.mjs
