[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
extism-pdk = { version = "1.2.0" }
nodejs_package_json = "0.2.0"
proto_pdk = { version = "0.20.0" } #, path = "../../proto/crates/pdk" }
proto_pdk_api = { version = "0.20.0" } #, path = "../../proto/crates/pdk-api" }
proto_pdk_test_utils = { version = "0.24.0" } #, path = "../../proto/crates/pdk-test-utils" }
regex = { version = "1.10.4", default-features = false, features = [
	"std",
	"unicode",
] }
serde = "1.0.203"
serde_json = "1.0.117"
starbase_sandbox = "0.6.1"
tokio = { version = "1.38.0", features = ["full"] }

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"
