[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
extism-pdk = { version = "1.2.0" }
nodejs_package_json = "0.2.0"
proto_pdk = { version = "0.21.2" } #, path = "../../proto/crates/pdk" }
proto_pdk_api = { version = "0.21.2" } #, path = "../../proto/crates/pdk-api" }
proto_pdk_test_utils = { version = "0.25.1" } #, path = "../../proto/crates/pdk-test-utils" }
regex = { version = "1.10.5", default-features = false, features = [
	"std",
	"unicode",
] }
serde = "1.0.204"
serde_json = "1.0.120"
starbase_sandbox = "0.6.4"
tokio = { version = "1.38.0", features = ["full"] }

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"
