[package]
name = "node_depman_plugin"
version = "0.3.1"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
node_common = { path = "../common" }
extism-pdk = { workspace = true }
proto_pdk = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proto_pdk_test_utils = { workspace = true }
serde_json = { workspace = true }
starbase_sandbox = { workspace = true }
tokio = { workspace = true }
