[package]
name = "node_plugin"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
node_common = { path = "../common" }
extism-pdk = { workspace = true }
proto_pdk = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proto_pdk_test_utils = { workspace = true }
starbase_sandbox = { workspace = true }
tokio = { workspace = true }
